syntax = "proto3";

package auth;

option go_package = "proto/authpb";

// gRPC сервис для авторизации
service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Me(MeRequest) returns (MeResponse);
}

// ===== Register =====

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  string message = 1; // например: "user registered"
}

// ===== Login =====

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

// ===== Me =====

message MeRequest {
  string token = 1; // JWT
}

message MeResponse {
  int64 user_id = 1;
  string email = 2;
}
